--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
 	</target>
 
 	<target name="deploy" depends="war">
-		<copy file="dist/AntExample.war" todir="/home/buji/apache-tomcat-8.5.46/webapps"  />
+		<copy file="dist/AntExample.war" todir="/home/buji/apache-tomcat-8.5.46/webapps/"  />
 	</target>	
 
 	<target name="clean">
